style settings filter changes
Former-commit-id: 9e894f0e8de68434e58564e9c10c7b5c7c64b8af

--- a/app/components/Footer/style.css
+++ b/app/components/Footer/style.css
@@ -49,17 +49,16 @@
 #navigation a img {
   display: block;
   position: relative;
-  filter: hue-rotate(0deg) brightness(100%);
 }
 
 #navigation a:hover {
   display: block;
   margin-top: -4px;
-  filter: hue-rotate(0deg) brightness(100%);
+  filter: hue-rotate(0deg) grayscale(0%) brightness(100%);
 }
 
 #navigation a.active {
-  filter: hue-rotate(0deg) brightness(100%);
+  filter: hue-rotate(0deg) grayscale(0%) brightness(100%);
 }
 
 #navigation a.active::before {
