--- a/app/components/Addressbook/style.css
+++ b/app/components/Addressbook/style.css
@@ -73,6 +73,8 @@
 }
 #addressbook-search {
   flex: 1;
+  /* margin-bottom: -16px; */
+  margin-left: -15px;
 }
 
 #addressbook-controls button {
@@ -223,6 +225,7 @@ select {
 }
 .searchaccount {
   float: right;
+  background: blue;
 }
 @keyframes tdd {
   33% {
