1_dugan: Auto stash before merge of "nexus_beta_gui_1_dugan" and "origin/nexus_beta_gui_1_StyleSettings"
Former-commit-id: 7e6d0e5abff77c8a251de6e94d67f5d1b81bd4c9

--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -4,6 +4,16 @@
   display: flex;
   flex-direction: column;
 }
+/* 
+#SettingsStyle {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+#styleForm {
+  flex: 1;
+} */
 
 #settings > h2 {
   flex: 0;
@@ -172,7 +182,6 @@ form {
 #ok-button {
   float: left;
 }
-
 
 #noPad {
   margin-left: 0;
