USD=NXS Convertor
Former-commit-id: e16718d492d498c8b6658ab21315b32d8273b764

--- a/app/components/SendRecieve/style.css
+++ b/app/components/SendRecieve/style.css
@@ -59,7 +59,13 @@
 }
 
 .input {
-  width: 350px;
+  width: 175px;
+}
+.convertor {
+  display: flex;
+}
+.UsdConvertorLabel {
+  padding-left: 80px;
 }
 .label {
   font-size: 40px;
