--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -42,7 +42,11 @@
   --color-3: #556070; /* <-- Light Grey */
   --color-4: #34495e; /* <-- Medium Grey */
   --color-5: #ffffff; /* <-- White */
-
+  --nxs-logo: hue-rotate(0deg) brightness(100%) grayscale(0%);
+  --icon-menu: hue-rotate(0deg) brightness(100%) grayscale(0%);
+  --footer: hue-rotate(0deg) grayscale(100%) brightness(200%);
+  --footer-hover: hue-rotate(0deg) grayscale(0%) brightness(100%);
+  --footer-active: hue-rotate(0deg) grayscale(0%) brightness(100%);
   /* BACKGROUND IMAGE VARIABLES */
   /* --background-main-gradient: linear-gradient(
       rgba(17, 17, 17, 0.45),
@@ -52,7 +56,6 @@
     rgba(17, 17, 17, 0),
     rgba(17, 17, 17, 0)
   );
-
 
   --background-main-image: url("../images/background/Wallet-Design-Blue-AquaStars2-BG.png"); /* <-- Full Screen Background Image for Nexus Earth Theme */
 
@@ -148,7 +151,7 @@ body {
 }
 
 svg {
-  fill:currentColor;
+  fill: currentColor;
 }
 
 /* Header Image */
