--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -26,7 +26,7 @@
   margin: 1em 0;
   display: block;
   max-height: 49px;
-  filter: hue-rotate(0deg) brightness(100%) grayscale(0%);
+  filter: var(--nxs-logo);
 }
 
 #settings-menu {
@@ -42,14 +42,14 @@
   padding: 0 5px;
   width: 20px;
   height: 20px;
-  filter: hue-rotate(0deg) brightness(100%) grayscale(0%);
+  filter: var(--icon-menu);
 }
 
 .icon .tooltip {
   width: 120px;
 }
 
-.noDaemonPort{
+.noDaemonPort {
   position: absolute;
   padding: 0px;
   top: 90px;
