--- a/app/CSS/base/buttons.css
+++ b/app/CSS/base/buttons.css
@@ -8,56 +8,56 @@ Button
 :root {
 	--button-border-radius: 0;
 	--button-box-shadow: none;
-	--button-color: #fff;
+	--button-color: var(--color-5);
 	--button-text-shadow: none;
 	--button-border: none;
-	--button-background: #34495e;
-	--button-hover-color: #fff;
+	--button-background: var(--color-4);
+	--button-hover-color: var(--color-5);
 	--button-hover-border: none;
-	--button-hover-background: #34495e;
+	--button-hover-background: var(--color-4);
 	--button-hover-box-shadow: 0 .25em 2em rgba(0,0,0,.2);
 	--button-hover-transform: scale(1.04);
 	--button-active-transform: scale(1.02);
 	
-	--button-primary-color: #fff;
+	--button-primary-color: var(--color-5);
 	--button-primary-text-shadow: none;
 	--button-primary-border: none;
-	--button-primary-background: #0ca4fb;
-	--button-primary-hover-color: #fff;
+	--button-primary-background: var(--color-2);
+	--button-primary-hover-color: var(--color-5);
 	--button-primary-hover-border: none;
-	--button-primary-hover-background: #0ca4fb;
+	--button-primary-hover-background: var(--color-2);
 	
-	--button-positive-color: #fff;
+	--button-positive-color: var(--color-5);
 	--button-positive-text-shadow: none;
 	--button-positive-border: none;
 	--button-positive-background: #32d66d;
-	--button-positive-hover-color: #fff;
+	--button-positive-hover-color: var(--color-5);
 	--button-positive-hover-border: none;
 	--button-positive-hover-background: #32d66d;
 	
-	--button-warning-color: #fff;
+	--button-warning-color: var(--color-5);
 	--button-warning-text-shadow: none;
 	--button-warning-border: none;
 	--button-warning-background: #fa0;
-	--button-warning-hover-color: #fff;
+	--button-warning-hover-color: var(--color-5);
 	--button-warning-hover-border: none;
 	--button-warning-hover-background: #fa0;
 	
-	--button-negative-color: #fff;
+	--button-negative-color: var(--color-5);
 	--button-negative-text-shadow: none;
 	--button-negative-border: none;
 	--button-negative-background: #e74c3c;
-	--button-negative-hover-color: #fff;
+	--button-negative-hover-color: var(--color-5);
 	--button-negative-hover-border: none;
 	--button-negative-hover-background: #e74c3c;
 
-	--button-ghost-color: #eee;
+	--button-ghost-color: var(--color-5);
 	--button-ghost-text-shadow: none;
-	--button-ghost-border: 1px solid #888;
+	--button-ghost-border: 1px solid var(--color-4);
 	--button-ghost-background: none;
-	--button-ghost-hover-color: #fff;
-	--button-ghost-hover-border: 1px solid #fff;
-	--button-ghost-hover-background: #none;
+	--button-ghost-hover-color: var(--color-5);
+	--button-ghost-hover-border: 1px solid var(--color-5);
+	--button-ghost-hover-background: none;
 }
 
 
