--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -173,7 +173,7 @@ form {
   /* Just a little styling to make it pretty */
   border: 1px solid var(--color-4);
   background: var(--color-4);
-  color: white;
+  color: var(--color-5);
   margin-left: -10%;
 }
 #no-button {
