--- a/app/CSS/controls/panel.css
+++ b/app/CSS/controls/panel.css
@@ -4,32 +4,31 @@ Panel
 */
 
 :root {
-	--panel-background-color: rgba(47, 50, 65, 0.7);
-	--panel-shadow: 0 1px 1px rgba(0,0,0,.05);
-	--panel-gradient: linear-gradient(
+  --panel-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  --panel-gradient: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.6) 0%,
-    rgba(0, 0, 0, 0.6) 100%
+    var(--panel-background-color) 0%,
+    var(--panel-background-color) 100%
   );
 }
 
 .panel {
-	/* margin: auto; */
-	box-sizing: border-box;
-	position: relative;
-	/* min-width: 300px; */
-	/* margin: 0 auto; */
-	/* padding: 1.5em 3em; */
-	background-image: var(--panel-gradient), var(--background-main-image);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-position: center;
-	border: 1px solid rgba(0,0,0,0.1);
-	box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
-	/* text-shadow: 0 1px 3px rgba(0,0,0,0.4); */
-	/* color: white; */
-	overflow: hidden;
+  /* margin: auto; */
+  box-sizing: border-box;
+  position: relative;
+  /* min-width: 300px; */
+  /* margin: 0 auto; */
+  /* padding: 1.5em 3em; */
+  background-image: var(--panel-gradient), var(--background-main-image);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+  /* text-shadow: 0 1px 3px rgba(0,0,0,0.4); */
+  /* color: white; */
+  overflow: hidden;
 }
 
 /* TODO: this blur layer was causing issues if children weren't position: relative, and didn't scroll correctly */
@@ -49,13 +48,13 @@ Panel
 } */
 
 .panel .panel {
-	background-color: rgba(47, 50, 65, 0.4);
-	background-image: none;
-	box-shadow: none;
-    border: 1px solid rgba(0,0,0,.1);
+  background-color: var(--panel-background-color);
+  background-image: none;
+  box-shadow: none;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .panel .panel::before {
-	filter: initial;
-	margin: 0;
+  filter: initial;
+  margin: 0;
 }
