--- a/app/components/Overview/style.css
+++ b/app/components/Overview/style.css
@@ -27,17 +27,17 @@ Table of Contents
   font-weight: 800;
 }
 .h2-nospace {
-  font-size: .8em;
+  font-size: 0.8em;
   letter-spacing: 0px;
   text-shadow: 2px 2px #111111;
 }
 
 .maxmindCopyright {
-  position: absolute;;
+  position: absolute;
   bottom: 0px;
   z-index: 1;
-  color:#05a5ff;
-  opacity: 0.4 ;
+  color: #05a5ff;
+  opacity: 0.4;
 }
 
 /*------------------------------------------------------------------
