Added several menu options and auto daemon ability
Former-commit-id: 319c6d2425946795dfe454657b59b1cb8ab3eca1

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -59,7 +59,7 @@
     rgba(17, 17, 17, 0)
   );
 
-  --background-main-image: url("../images/background/starrynight.jpeg"); /* <-- Full Screen Background Image for Nexus Earth Theme */
+  --background-main-image: url("../images/background/starrynight.jpg"); /* <-- Full Screen Background Image for Nexus Earth Theme */
 
   /* FONTS */
   --font-1: "Lato"; /* <-- Sourced Above in First @font-face*/
