acctive icon on settings menu color picker connection
Former-commit-id: a6d0fa03b04e722844c2262f7dec91ae32613cce

--- a/app/CSS/controls/tabs.css
+++ b/app/CSS/controls/tabs.css
@@ -65,5 +65,5 @@ Tabs
     height: 20px;
     margin-right: .75em;
     vertical-align: -4px;
-    filter: none;
+    filter: var(--footer-active);
 }
