css variable convert
Former-commit-id: 9ef45fd5af1b9701d09ce30f1d00ff03738a294f

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -72,7 +72,7 @@ li {
 
 body {
   position: relative;
-  color: white;
+  color: var(--color-5);
   height: 100vh;
   background-color: #232c39;
   background-image: var(--background-main-gradient),
