--- a/app/CSS/controls/progress.css
+++ b/app/CSS/controls/progress.css
@@ -22,3 +22,24 @@ Progress Bar
 	background-color: var(--progress-background-color);
 	transition: width var(--progress-transition-timing) linear;
 }
+
+/*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
