--- a/app/CSS/controls/switch.css
+++ b/app/CSS/controls/switch.css
@@ -85,3 +85,24 @@ text-align: center;
 font-size: 14px;
 line-height: 1.2;
 }
+
+/*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
