--- a/app/CSS/controls/tooltip.css
+++ b/app/CSS/controls/tooltip.css
@@ -93,3 +93,25 @@ Switch
 *:hover > .tooltip {
   visibility: visible;
 }
+
+
+/*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
