--- a/app/CSS/base/forms.css
+++ b/app/CSS/base/forms.css
@@ -248,3 +248,27 @@ form div.field.aligned label {
 .field.clear {
   clear: both;
 }
+
+/*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+  .field {
+    margin: 1.625em 0;
+  }
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
