--- a/app/CSS/base/grid.css
+++ b/app/CSS/base/grid.css
@@ -35,3 +35,24 @@ Grid
 	padding-left: calc(var(--gutter));
 	flex-basis: calc((100% / var(--columns)) * var(--column-width)); 
 }
+
+/*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
