--- a/app/CSS/controls/tabs.css
+++ b/app/CSS/controls/tabs.css
@@ -67,3 +67,24 @@ Tabs
     vertical-align: -4px;
     filter: var(--footer-active);
 }
+
+/*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
