--- a/app/components/Exchange/style.css
+++ b/app/components/Exchange/style.css
@@ -102,3 +102,25 @@ select.soflow-color {
 #Exchange-container p {
   margin-top: 0;
 }
+
+
+/*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
