--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -100,3 +100,42 @@
     background-color: var(--color-2);
   }
 }
+
+
+/*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+  #hdr-line {
+    margin-top: -10px;
+  }
+  #settings-menu {
+    display: block;
+    top: 6em;
+    right: 0;
+    text-align: center;
+    width: 100%;
+  }
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+  #settings-menu {
+    display: inline-block;
+    position: absolute;
+    top: 2em;
+    right: 4em;
+    text-align: right;
+  }
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
