--- a/app/components/Loader/style.css
+++ b/app/components/Loader/style.css
@@ -81,3 +81,24 @@
       box-shadow: 0px 0px 20px var(--color-2);
     }
   }
+
+  /*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
