--- a/app/components/Transactions/style.css
+++ b/app/components/Transactions/style.css
@@ -83,3 +83,24 @@
 @media (min-height: 800px) {
 	#transactions-chart {display: block;}
 }
+
+/*------------------------------------------------------------------
+MEDIA QUERIES
+------------------------------------------------------------------*/
+
+@media (min-width: 300px) {
+}
+@media (min-width: 375px) {
+}
+@media (min-width: 480px) {
+}
+@media (min-width: 600px) {
+}
+@media (min-width: 800px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1600px) {
+}
