--- a/app/components/Footer/style.css
+++ b/app/components/Footer/style.css
@@ -132,6 +132,9 @@ MEDIA QUERIES
 ------------------------------------------------------------------*/
 
 @media (min-width: 300px) {
+  .maxmindCopyright{
+    display: none;
+  }
 }
 @media (min-width: 375px) {
 }
@@ -142,6 +145,17 @@ MEDIA QUERIES
 @media (min-width: 800px) {
 }
 @media (min-width: 1024px) {
+  .maxmindCopyright{
+    display: block;
+    position: absolute;
+    left: 5px;
+    bottom: 0px;
+    z-index: 1;
+    color: var(--color-2);
+    opacity: 0.4;
+    filter: var(--nxs-logo);
+    
+  }
 }
 @media (min-width: 1200px) {
 }
