--- a/app/CSS/controls/panel.css
+++ b/app/CSS/controls/panel.css
@@ -16,9 +16,6 @@ Panel
   /* margin: auto; */
   box-sizing: border-box;
   position: relative;
-  /* min-width: 300px; */
-  /* margin: 0 auto; */
-  /* padding: 1.5em 3em; */
   background-image: var(--panel-gradient), var(--background-main-image);
   background-size: cover;
   background-repeat: no-repeat;
@@ -26,26 +23,8 @@ Panel
   background-position: center;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
-  /* text-shadow: 0 1px 3px rgba(0,0,0,0.4); */
-  /* color: white; */
   overflow: hidden;
 }
-
-/* TODO: this blur layer was causing issues if children weren't position: relative, and didn't scroll correctly */
-
-/* .panel::before {
-	display: block;
-	position: absolute;
-	content: "";
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: inherit;
-	filter: blur(6px);
-	margin: -5%;
-	z-index: 0;
-} */
 
 .panel .panel {
   background-color: var(--panel-background-color);
@@ -64,10 +43,16 @@ MEDIA QUERIES
 ------------------------------------------------------------------*/
 
 @media (min-width: 300px) {
+  .panel {
+    padding: 0;
+  }
 }
 @media (min-width: 375px) {
 }
 @media (min-width: 480px) {
+  .panel {
+    padding: calc(var(--line-height) * 1em);
+  }
 }
 @media (min-width: 600px) {
 }
