--- a/app/components/Overview/style.css
+++ b/app/components/Overview/style.css
@@ -19,18 +19,18 @@ Table of Contents
   font-weight: 800;
 }
 .h2-nospace {
-  font-size: 0.8em;
+  font-size: .8em;
   letter-spacing: 0px;
   text-shadow: 2px 2px #111111;
 }
 
 .maxmindCopyright {
-  position: absolute;
+  position: absolute;;
   bottom: 0px;
   z-index: 1;
-  color: var(--color-2);
-  opacity: 0.4;
-  filter: var(--nxs-logo);
+  color:var(--color-2);
+  opacity: 0.4 ;
+  filter: hue-rotate(0deg) grayscale(0%) brightness(100%);
 }
 
 /*------------------------------------------------------------------
@@ -50,7 +50,7 @@ I. NEXUS EARTH VISUALIZATION
   left: 0px;
   width: 100%;
   height: 100%;
-  text-align: center;
+  text-align: left;
   overflow: hidden;
 }
 canvas {
@@ -97,7 +97,7 @@ IV. LEFT CONTENT - connection, Block Weight, Block Count
   height: 35px;
   padding-top: 5px;
   padding-left: 20px;
-  filter: var(--footer);
+  filter: hue-rotate(0deg) grayscale(0%) brightness(100%);
 }
 .left-stats > div {
   margin: 1em 0;
@@ -124,7 +124,7 @@ V. RIGHT CONTENT - Trust Weight, Interest Weight, Stake Weight
   padding-top: 5px;
   padding-right: 20px;
   left: -55px;
-  filter: var(--footer);
+  filter: hue-rotate(0deg) grayscale(0%) brightness(100%);
 }
 .right-stats > div {
   margin: 1em 0;
@@ -141,69 +141,8 @@ MEDIA QUERIES
 ------------------------------------------------------------------*/
 
 @media (min-width: 300px) {
-  #overviewPage {
-    margin: 0 -30px;
-  }
-  canvas{
-    position:absolute;
-    width: 100%;
-  }
   #nxs-earth {
-    opacity: .3;
-    text-align: left;
-  }
-  .left-stats {
-    position: absolute;
-    left: 0px;
-    width: 300px;
-    top: 8em;
-  }
-  .left-stats > div {
-    margin: .5em 0;
-  }
-  .left-stats > div img {
-    float: left;
-  }
-  .left-stats img {
-    position: relative;
-    width: 35px;
-    height: 35px;
-    padding-top: 5px;
-    padding-left: 20px;
-    filter: var(--footer);
-  }
-  .right-stats {
-    display: none;
-    position: absolute;
-    right: 0px;
-    width: 100px;
-    top: 8em;
-    padding-right: 15px;
-  }
-  .right-stats img {
-    position: relative;
-    left: 0px;
-    width: 20px;
-    height: 20px;
-    padding-top: 5px;
-    padding-right: 10px;
-  }
-  .h2 {
-    font-size: 1em;
-    letter-spacing: 0px;
-    text-shadow: 1px 1px #111111;
-    font-weight: 800;
-    text-align: left;
-    margin-left: 80px;
-  }
-  .overviewValue {
-    position: absolute;
-    font-size: 1.8em;
-    text-align: left;
-    margin-left: 80px;
-  }
-  .maxmindCopyright{
-    display: none;
+    opacity: .4;
   }
 }
 @media (min-width: 375px) {
@@ -215,8 +154,12 @@ MEDIA QUERIES
 @media (min-width: 800px) {
 }
 @media (min-width: 1024px) {
+  #nxs-earth {
+    opacity: 1;
+  }
 }
 @media (min-width: 1200px) {
+
 }
 @media (min-width: 1600px) {
 }
