--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -81,7 +81,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   /* font-family: Arial, Helvetica, Helvetica Neue, serif; */
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
   overflow-y: hidden;
 }
 
