--- a/app/components/Overview/style.css
+++ b/app/components/Overview/style.css
@@ -90,6 +90,7 @@ IV. LEFT CONTENT - connection, Block Weight, Block Count
   flex-direction: column;
   align-self: center;
   text-align: right;
+  margin-top: -2em;
   z-index: 1;
 }
 .left-stats img {
@@ -101,10 +102,13 @@ IV. LEFT CONTENT - connection, Block Weight, Block Count
   filter: var(--footer);
 }
 .left-stats > div > div {
-  margin: 1em 0;
+  margin: 2em 0;
 }
-.left-stats > div > div:last-child {
-  margin: 0;
+.left-top-stats {
+  margin-bottom: -1em;
+}
+.left-bottom-stats {
+  margin-top: -1em;
 }
 .left-stats > div img {
   float: right;
@@ -119,6 +123,7 @@ V. RIGHT CONTENT - Trust Weight, Interest Weight, Stake Weight
   flex-direction: column;
   align-self: center;
   text-align: left;
+  margin-top: -2em;
   z-index: 1;
 }
 .right-stats img {
@@ -131,7 +136,7 @@ V. RIGHT CONTENT - Trust Weight, Interest Weight, Stake Weight
   filter: var(--footer);
 }
 .right-stats > div > div {
-  margin: 1em 0;
+  margin: 2em 0;
 }
 .right-stats > div img {
   float: left;
