--- a/app/components/Market/style.css
+++ b/app/components/Market/style.css
@@ -1,17 +1,17 @@
 #market {
-	position: relative;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #market > h2 {
-	flex: 0;
+  flex: 0;
 }
 
 #market > .panel {
-	flex: 1;
-	overflow-y: auto;
+  flex: 1;
+  overflow-y: auto;
 }
 
 .exchangeUnitContainer {
@@ -84,18 +84,18 @@ Refresh Button
 */
 
 a.refresh {
-	display: block;
+  display: block;
   position: absolute;
   top: 4em;
   right: 0;
   font-family: var(--mono-font-family);
-	font-size: .875em;
-  opacity: .75;
+  font-size: 0.875em;
+  opacity: 0.75;
   color: #fff;
   cursor: pointer;
 }
 
 a.refresh:hover {
-  opacity: .95;
+  opacity: 0.95;
   text-decoration: underline;
 }
