working on straighting out the style vars
Former-commit-id: 9b88948b589145f34c1373f8db453a342c53f77b

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -161,7 +161,7 @@ svg {
   height: 35px;
   width: 35px;
   padding-right: 20px;
-  filter: var(--footer);
+  filter: var(--icon-menu);
 }
 
 /*------------------------------------------------------------------
