--- a/app/components/Footer/style.css
+++ b/app/components/Footer/style.css
@@ -54,7 +54,7 @@
 #navigation a:hover {
   display: block;
   margin-top: -4px;
-  filter: var(--footer-hover);
+  filter: var(--footer-active);
 }
 
 #navigation a.active {
@@ -110,9 +110,9 @@
   }
 }
 
-#navigation a.active:hover {
-  /* filter: drop-shadow(0px 0px 10px #0ca4fb) grayscale(0) ; */
-}
+/* #navigation a.active:hover { */
+/* filter: drop-shadow(0px 0px 10px #0ca4fb) grayscale(0) ; */
+/* } */
 
 #navigation a img {
   display: block;
@@ -126,13 +126,12 @@
   margin: 0.625em;
 }
 
-
 /*------------------------------------------------------------------
 MEDIA QUERIES
 ------------------------------------------------------------------*/
 
 @media (min-width: 300px) {
-  .maxmindCopyright{
+  .maxmindCopyright {
     display: none;
   }
 }
@@ -145,7 +144,7 @@ MEDIA QUERIES
 @media (min-width: 800px) {
 }
 @media (min-width: 1024px) {
-  .maxmindCopyright{
+  .maxmindCopyright {
     display: block;
     position: absolute;
     left: 5px;
@@ -154,7 +153,6 @@ MEDIA QUERIES
     color: var(--color-2);
     opacity: 0.4;
     filter: var(--nxs-logo);
-    
   }
 }
 @media (min-width: 1200px) {
