--- a/app/components/Overview/style.css
+++ b/app/components/Overview/style.css
@@ -19,17 +19,17 @@ Table of Contents
   font-weight: 800;
 }
 .h2-nospace {
-  font-size: .8em;
+  font-size: 0.8em;
   letter-spacing: 0px;
   text-shadow: 2px 2px #111111;
 }
 
 .maxmindCopyright {
-  position: absolute;;
+  position: absolute;
   bottom: 0px;
   z-index: 1;
-  color:var(--color-2);
-  opacity: 0.4 ;
+  color: var(--color-2);
+  opacity: 0.4;
   filter: hue-rotate(0deg) grayscale(0%) brightness(100%);
 }
 
@@ -98,7 +98,7 @@ IV. LEFT CONTENT - connection, Block Weight, Block Count
   height: 35px;
   padding-top: 5px;
   padding-left: 20px;
-  filter: hue-rotate(0deg) grayscale(0%) brightness(100%);
+  filter: var(--icon-menu);
 }
 .left-stats > div > div {
   margin: 2em 0;
@@ -132,7 +132,7 @@ V. RIGHT CONTENT - Trust Weight, Interest Weight, Stake Weight
   padding-top: 5px;
   padding-right: 20px;
   left: -55px;
-  filter: hue-rotate(0deg) grayscale(0%) brightness(100%);
+  filter: var(--icon-menu);
 }
 .right-stats > div > div {
   margin: 2em 0;
