--- a/app/components/SendRecieve/style.css
+++ b/app/components/SendRecieve/style.css
@@ -192,11 +192,10 @@
 }
 .lookupButton {
   margin-left: 8px;
-  color: var(--color-5);
-  background-color: transparent;
+
   height: 30px;
   width: 30px;
-  border-color: var(--color-2);
+  filter: var(--icon-menu);
   border-radius: 100px;
 }
 /* AddressModal */
