--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -49,6 +49,12 @@
   width: 120px;
 }
 
+.sync-img {
+  -webkit-animation: spinner 2s linear infinite;
+}
+
+@-webkit-keyframes spinner { 100% { -webkit-transform: rotate(360deg); } }
+
 /*.noDaemonPort {
   position: absolute;
   padding: 0px;
