cool fix for NW579
Former-commit-id: 14e2a35f6b929ec8cbaaa48ad983629f7946aaa1

--- a/app/components/Security/style.css
+++ b/app/components/Security/style.css
@@ -45,6 +45,10 @@
   flex: 2;
 }
 
+#password-note {
+  margin-top: 1.625em 0;
+}
+
 .expander {
   display: flex;
   align-items: baseline;
@@ -124,7 +128,6 @@
   border-right-color: red;
   border-bottom-color: transparent;
 }
-
 
 /*------------------------------------------------------------------
 MEDIA QUERIES
