--- a/app/components/Addressbook/style.css
+++ b/app/components/Addressbook/style.css
@@ -312,6 +312,7 @@ a.impexp {
   color: #fff;
   cursor: pointer;
   margin-right: 20px;
+  display: block;
 }
 /*------------------------------------------------------------------
 MEDIA QUERIES
