Language  Saved To Settings
Former-commit-id: d722f8dc26ae7dd85ed773f409776475eff08f8e

--- a/app/components/SendRecieve/style.css
+++ b/app/components/SendRecieve/style.css
@@ -99,8 +99,8 @@ textarea {
 /* CONFIRM MODAL */
 .custom-overlay {
   position: absolute;
-  background: #282828;
   padding: 0px;
+  overflow: hidden;
 }
 .custom-modal2 {
   background: #282828;
