Transaction Details Layout, Language Support
Former-commit-id: 41e6f11cb663f3ca0ab289ff21a32524ddf04d5a

--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -46,14 +46,18 @@
 }
 
 .icon .tooltip {
-  width: 120px;
+  width: 140px;
 }
 
 .sync-img {
   -webkit-animation: spinner 2s linear infinite;
 }
 
-@-webkit-keyframes spinner { 100% { -webkit-transform: rotate(360deg); } }
+@-webkit-keyframes spinner {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
 
 /*.noDaemonPort {
   position: absolute;
@@ -106,7 +110,6 @@
     background-color: var(--color-2);
   }
 }
-
 
 /*------------------------------------------------------------------
 MEDIA QUERIES
