BakupWallet button Fix, Wallpaper Float Fix,
Former-commit-id: 50180aacb1d14e73e89305929cd4c41a4b139578

--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -105,7 +105,10 @@ form {
 }
 
 .wallpaperDiv {
-  margin-left: -10px;
+  width: 5px;
+}
+#wallpaper {
+  width: 10px;
 }
 #settings input[type="file"]::before {
   /* content: "Select a wallpaper"; */
