cleaned redundant parts of the logo svg & refactored the logo
Former-commit-id: 47a4b359471888d2c6b4d8f40a04efacf2b2c3fd

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -173,6 +173,15 @@ input[type="text"]::placeholder {
   filter: var(--icon-menu);
 }
 
+/* Utility classes */
+.relative {
+  position: relative;
+}
+
+.v-align {
+  vertical-align: middle;
+}
+
 /*------------------------------------------------------------------
 MEDIA QUERIES
 ------------------------------------------------------------------*/
